[package]
name = "lusion"
version = "0.0.0"
authors = ["Yanhai <shimmly@live.cn>"]
edition = "2018"
readme = "README.md"
license = "MIT or Apache-2.0"

[workspace]
members = [
  ".",
  "lusion-db",
  "lusion-web",
  "lusion-validator",
]

[dependencies]
lusion-db = { path = "./lusion-db" }
lusion-web = { path = "./lusion-web" }

dotenv = "0.13"
tide = "0.1"
