[package]
name = "lusion-core"
version = "0.1.0"
authors = ["Yanhai <shimmly@live.cn>"]
edition = "2018"
readme = "../README.md"
license = "MIT or Apache-2.0"

[dependencies]
bytes = "0.4"
futures-preview = "0.3.0-alpha.15"
log = "0.4"
num_cpus = "1.10"
pin-utils = "0.1.0-alpha.4"
romio = "0.3.0-alpha.6"
