[package]
name = "lusion-db"
version = "0.0.0"
authors = ["Yanhai <shimmly@live.cn>"]
edition = "2018"
readme = "../README.md"
license = "MIT or Apache-2.0"

[dependencies]
bcrypt = "0.4"
failure = "0.1"
log = "0.4"
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"

[dependencies.uuid]
features = ["v4", "serde"]
version = "0.6"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.diesel]
features = ["r2d2", "uuid", "chrono", "serde_json", "postgres"]
version = "1.4"

[dev-dependencies]
dotenv = "0.13"
assert_matches = "1.2"
