[package]
name = "lusion-db"
version = "0.0.0"
authors = ["Yanhai <shimmly@live.cn>"]
edition = "2018"
readme = "../README.md"
license = "MIT or Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["r2d2", "uuid", "chrono", "serde_json", "postgres"] }
failure = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["v4", "serde"] }

[dev-dependencies]
dotenv = "0.13"
assert_matches = "1.2"
