[package]
name = "lusion-web"
version = "0.0.0"
authors = ["Yanhai <shimmly@live.cn>"]
edition = "2018"
readme = "../README.md"
license = "MIT or Apache-2.0"

[dependencies]
bytes = "0.4"
cookie = { version = "0.11", features = ["secure", "percent-encode"] }
failure = "0.1"
futures-preview = "=0.3.0-alpha.14"
http = "0.1"
http-service = "0.1"
http-service-mock = "0.1"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tide = "0.1"
time = "0.1"

[dev-dependencies]
assert_matches = "1.2"
