[package]
name = "lusion-web"
version = "0.0.0"
authors = ["Yanhai <shimmly@live.cn>"]
edition = "2018"
readme = "../README.md"
license = "MIT or Apache-2.0"

[dependencies]
lusion-db = { path = "../lusion-db" }

bcrypt = "0.4"
bytes = "0.4"
chrono = { version = "0.4", features = ["serde"] }
cookie = { version = "0.11", features = ["secure", "percent-encode"] }
failure = "0.1"
futures-preview = "0.3.0-alpha.15"
http = "0.1"
http-service = "0.2"
http-service-mock = "0.2"
log = "0.4"
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tide = "0.2"
time = "0.1"
uuid = { version = "0.6", features = ["v4", "serde"] }

[dev-dependencies]
dotenv = "0.13"
assert_matches = "1.2"
